--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstApp"
-        tools:targetApi="31">
-        <activity
-            android:name=".SignUp_Customer"
-            android:exported="false" />
+        tools:targetApi="34">
         <activity
             android:name=".Login"
             android:exported="true">
@@ -25,18 +22,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUp_Owner"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyFirstApp">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".SignUp_Customer"
+            android:exported="false" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".SignUp_Owner"
+            android:exported="false">
+        </activity>
+
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
