--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyFirstApp"
         tools:targetApi="34">
         <activity
+            android:name=".SplashActivity"
+            android:exported="false" />
+        <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
@@ -23,17 +26,11 @@
         </activity>
         <activity
             android:name=".SignUp_Customer"
-            android:exported="false" >
-
-        </activity>
-
+            android:exported="false"></activity>
         <activity
             android:name=".SignUp_Owner"
-            android:exported="false">
-        </activity>
-
-        <activity android:name=".MainActivity">
-        </activity>
+            android:exported="false"></activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
