--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,18 @@
         tools:targetApi="34">
         <activity
             android:name=".SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Login"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".Login"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".SignUp_Customer"
