--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,27 +13,27 @@
         android:theme="@style/Theme.MyFirstApp"
         tools:targetApi="34">
         <activity
+            android:name=".WhoAreYouPage"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Login"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SignUp_Customer"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".SignUp_Owner"
-            android:exported="false"></activity>
-        <activity android:name=".MainActivity"></activity>
+            android:exported="false" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
