Updated manifest for new files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.MyFirstApp"
         tools:targetApi="34">
         <activity
+            android:name=".ProductEditPage"
+            android:exported="false" />
+        <activity
             android:name=".home_seller"
             android:exported="false" />
         <activity
