added new activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.MyFirstApp"
         tools:targetApi="34">
         <activity
+            android:name=".ItemPreview"
+            android:exported="false" />
+        <activity
+            android:name=".StoreHome"
+            android:exported="false" />
+        <activity
             android:name=".Home_Customer"
             android:exported="false" />
         <activity
